kubernetes/admitadservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: admitad-service
spec:
  selector:
    app: admitad-service
    tier: backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
