kubernetes/pgservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
    tier: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
