kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /admitad-service
            pathType: Prefix
            backend:
              service:
                name: admitad-service
                port:
                  number: 8080
          - path: /postgres
            pathType: Prefix
            backend:
              service:
                name: postgres
                port:
                  number: 5432
